# tp_algos

./: .gitignore  README.md  test.cpp
module1/: task1  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp
module2/: task1.cpp  task2.cpp  task4.cpp
module3/: task2.cpp  task3.cpp
module3/taks1/: CMakeLists.txt  main.cpp
module3/taks1/AbstGraph/: IGraph.hpp
module3/taks1/ArcGraph/: ArcGraph.cpp  ArcGraph.hpp
module3/taks1/ListGraph/: ListGraph.cpp  ListGraph.hpp
module3/taks1/MatrixGraph/: MatrixGraph.cpp  MatrixGraph.hpp
module3/taks1/SetGraph/: SetGraph.cpp  SetGraph.hpp
seminars/: sem1.cpp  sem2.cpp  sem3.cpp  sem4.cpp
